[package]
name = "derby"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
